# metavision_sdk_4.2.1

./: README.md
include/hal/: metavision_hal_export.h
include/sdk/: version.h
include/sdk/analytics/algorithms/: counting_algorithm.h  dominant_value_events_algorithm.h  dominant_value_map_algorithm.h  frequency_map_async_algorithm.h  heat_map_frame_generator_algorithm.h  jet_monitoring_algorithm.h  map_generator_async_algorithm.h  period_map_async_algorithm.h  psm_algorithm.h  spatter_tracker_algorithm.h  tracking_algorithm.h
include/sdk/analytics/configs/: jet_monitoring_alarm_config.h  jet_monitoring_algorithm_config.h  jet_monitoring_configs.h  jet_monitoring_logger_config.h  line_cluster_tracking_config.h  line_particle_tracking_config.h  spatter_tracker_algorithm_config.h  tracking_algorithm_config.h
include/sdk/analytics/events/: event_jet.h  event_jet_alarm.h  event_spatter_cluster.h  event_tracking_data.h
include/sdk/analytics/utils/: counting_calibration.h  counting_drawing_helper.h  counting_error_code.h  counting_exception.h  filtered_bool.h  histogram_drawing_helper.h  histogram_utils.h  jet_monitoring_alarms.h  jet_monitoring_drawing_helper.h  jet_monitoring_logger.h  line_cluster.h  line_cluster_drawing_helper.h  line_particle_track_drawing_helper.h  line_particle_tracking_output.h  mono_counting_status.h  optim_vector.h  rectangle_roi_utils.h  sliding_histogram.h  spatter_tracker_csv_logger.h  tracking_drawing.h
include/sdk/calibration/algorithms/: blinking_dots_grid_detector_algorithm.h  blinking_frame_generator_algorithm.h  dft_high_freq_scorer_algorithm.h
include/sdk/calibration/configs/: blinking_dots_grid_detector_algorithm_config.h  blinking_frame_generator_algorithm_config.h  dft_high_freq_scorer_algorithm_config.h
include/sdk/calibration/pipeline/: blinking_pattern_generator_stage.h  pattern_blinker_stage.h
include/sdk/calibration/utils/: calibrate_mono_camera.h  calibration_detection_frame_generator.h  calibration_grid_pattern.h  pattern_blinker.h  points_on_grid.h  recorded_pattern_serializer.h
include/sdk/cv/algorithms/: activity_noise_filter_algorithm.h  anti_flicker_algorithm.h  dense_flow_frame_generator_algorithm.h  event_converter_algorithm.h  event_counter_algorithm.h  frequency_algorithm.h  frequency_clustering_algorithm.h  period_algorithm.h  plane_fitting_flow_algorithm.h  roi_mask_algorithm.h  rotate_events_algorithm.h  sparse_flow_frame_generator_algorithm.h  sparse_optical_flow_algorithm.h  spatio_temporal_contrast_algorithm.h  trail_filter_algorithm.h  transpose_events_algorithm.h  triplet_matching_flow_algorithm.h
include/sdk/cv/events/: event_frequency.h  (+3 more)
include/sdk/ml/: pipeline_builder.h
metavision/sdk/analytics/samples/metavision_jet_monitoring_calibration/: CMakeLists.txt  jet_monitoring_calibration_gui.cpp  jet_monitoring_calibration_gui.h  metavision_jet_monitoring_calibration.cpp
metavision/sdk/analytics/samples/metavision_psm_calibration/: CMakeLists.txt  metavision_psm_calibration.cpp  psm_config_csv_loader.cpp  psm_config_csv_loader.h  psm_display_simulator.cpp  psm_display_simulator.h  roi_line_events_loader.cpp  roi_line_events_loader.h  time_slice_cursor.cpp  time_slice_cursor.h
metavision/sdk/analytics/samples/metavision_spatter_tracking/: CMakeLists.txt  metavision_spatter_tracking.cpp  simple_timer.cpp  simple_timer.h
metavision/sdk/analytics/samples/metavision_vibration_estimation/: CMakeLists.txt  metavision_vibration_estimation.cpp
metavision/sdk/calibration/apps/metavision_blinking_pattern_recording/: CMakeLists.txt  metavision_blinking_pattern_recording.cpp
metavision/sdk/calibration/apps/metavision_mono_calibration/: CMakeLists.txt  metavision_mono_calibration.cpp
metavision/sdk/calibration/apps/metavision_mono_calibration_recording/: CMakeLists.txt  blinking_chessboard_detector.cpp  blinking_chessboard_detector.h  blinking_dots_grid_detector.cpp  blinking_dots_grid_detector.h  metavision_calibration_pattern_chessboard.html  metavision_calibration_pattern_dots.html  metavision_mono_calibration_recording.cpp
metavision/sdk/cv/apps/metavision_xyt/: CMakeLists.txt  metavision_xyt.cpp  plugins.cfg.in  resources.cfg.in
metavision/sdk/cv/apps/metavision_xyt/Polyfill/: OgreImGuiInputListener.cpp  OgreImGuiInputListener.h  OgreImGuiOverlay.cpp  OgreImGuiOverlay.h
metavision/sdk/cv/samples/metavision_undistortion/: CMakeLists.txt  constants.cpp.in  constants.h  metavision_undistortion.cpp
metavision/sdk/cv3d/samples/metavision_model_3d_tracking/: CMakeLists.txt  metavision_model_3d_tracking.cpp
metavision/sdk/ml/samples/metavision_detection_and_tracking_pipeline/: CMakeLists.txt  metavision_detection_and_tracking_pipeline.cpp
metavision_ml/classification/: __init__.py  data_module.py  fnn_data_module.py  fnn_lightning_model.py  lightning_model.py  models.py  utils_metrics.py
metavision_ml/core/: __init__.py  pyramid.py  unet.py  unet_variants.py  warp_modules.py  warping.py
metavision_ml/data/: __init__.py  box_processing.py  cd_processor_dataset.py  cd_processor_iterator.py  join_thread.py  label_loading.py  moving_box.py  moving_mnist.py  nonsequential_dataset.py  scheduler.py  sequential_dataset.py  sequential_dataset_common.py  transformations.py
metavision_ml/detection/: anchors.py  box.py  data_factory.py  feature_extractors.py  jitting.py  jitting_test.py  lightning_model.py  losses.py  rpn.py  single_stage_detector.py
metavision_ml/detection_tracking/: __init__.py  display_frame.py  io.py  object_detector.py
metavision_ml/flow/: __init__.py  callbacks.py  data_module.py  feature_extractor.py  flow_network.py  lightning_model.py  losses.py  viz.py
metavision_ml/flow/flow_dataset_generation/: generate_gt_flow_from_mvsec_sequence.py  generate_gt_flow_from_planarmotionstream_and_eventsimulator.py
metavision_ml/flow/flow_evaluation/: compare_flow_kpis.py  eval_flow.py
metavision_ml/metrics/: coco_eval.py
metavision_ml/preprocessing/: __init__.py  event_to_tensor.py  hdf5.py  viz.py
metavision_ml/utils/: h5_writer.py  main_tools.py  prepare_labels_chifoumi.py
(+122 files in other folders)
